# tree-sitter-apertium

./: .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .npmignore  Makefile  README.md  build-single.sh  build.sh  pyproject.toml  setup.sh
python/: MANIFEST.in  build.sh  setup.py
python/test/: test.py
python/tree_sitter_apertium/: __init__.py
python/tree_sitter_apertium/grammars/: cg  lexc  lexd  rtx  twolc  xfst
tree-sitter-cg/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  index.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-cg/bindings/node/: binding.cc  index.js
tree-sitter-cg/bindings/rust/: lib.rs
tree-sitter-cg/queries/: highlights.scm
tree-sitter-cg/src/: grammar.json  node-types.json  parser.c
tree-sitter-cg/test/corpus/: basic.txt  detail.txt  docs.txt  subreading.txt
tree-sitter-cg/test/highlight/: apertium-init.rlx
tree-sitter-lexc/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-lexc/bindings/node/: binding.cc  index.js
tree-sitter-lexc/bindings/rust/: lib.rs
tree-sitter-lexc/src/: grammar.json  node-types.json  parser.c
tree-sitter-lexc/test/corpus/: apertium-init.txt  basic.txt  detail.txt
tree-sitter-lexc/test/highlight/: basic.lexc
tree-sitter-lexd/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  index.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-lexd/bindings/node/: index.js
tree-sitter-lexd/bindings/rust/: lib.rs
tree-sitter-lexd/queries/: highlights.scm
tree-sitter-lexd/src/: binding.cc  grammar.json  node-types.json  parser.c
tree-sitter-lexd/test/corpus/: minimal.txt  regex.txt  sequential_lexicon.txt  spacing.txt  tags.txt  whatever.txt
tree-sitter-lexd/test/highlight/: basic.lexd
tree-sitter-rtx/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  index.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-rtx/bindings/node/: index.js
tree-sitter-rtx/bindings/rust/: lib.rs
tree-sitter-rtx/queries/: highlights.scm
tree-sitter-rtx/src/: binding.cc  grammar.json  node-types.json  parser.c
tree-sitter-rtx/test/corpus/: basic.txt
tree-sitter-rtx/test/highlight/: Agreement.rtx
tree-sitter-rtx/test/tags/: Agreement.rtx
tree-sitter-twolc/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  index.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-twolc/bindings/node/: index.js
tree-sitter-twolc/bindings/rust/: lib.rs
tree-sitter-twolc/src/: binding.cc  grammar.json  node-types.json  parser.c
tree-sitter-twolc/test/corpus/: basic.txt  detail.txt
tree-sitter-twolc/test/highlight/: apertium-init.twol
tree-sitter-xfst/: .npmignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-xfst/bindings/node/: binding.cc  index.js
tree-sitter-xfst/bindings/rust/: lib.rs
tree-sitter-xfst/src/: grammar.json  node-types.json  parser.c
tree-sitter-xfst/test/corpus/: detail.txt  spellrelax.txt
tree-sitter-xfst/test/highlight/: apertium-init.spellrelax
tree_sitter_apertium/: __init__.py
