[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-cg"
description = "tree-sitter grammar of VISL-CG"
version = "1.1.2"
keywords = ["incremental", "parsing", "tree-sitter", "cg"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Daniel Swanson" }]
requires-python = ">=3.9"
license.text = "GPL-3.0-or-later"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/apertium/tree-sitter-apertium"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
