[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-rtx"
description = "tree-sitter parser of Apertium-recursive rule files."
version = "1.2.1"
keywords = ["incremental", "parsing", "tree-sitter", "rtx"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Daniel Swanson" }]
requires-python = ">=3.9"
license.text = "GPL-3.0-or-later"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/apertium/tree-sitter-apertium"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
