[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-twolc"
description = "tree-sitter grammar of hfst-twolc"
version = "1.0.0"
keywords = ["incremental", "parsing", "tree-sitter", "twolc"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Daniel Swanson" }]
requires-python = ">=3.9"
license.text = "GPL-3.0-or-later"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/apertium/tree-sitter-apertium"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
